--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode
+# Covers JetBrains IDEs: PyCharm, IntelliJ, RubyMine, PhpStorm, AppCode, etc.
 # Directory-based project format
 .idea/
-/py35_intel
